export const snapshot = {};

snapshot[`processSpacing - generates correct spacing scale 1`] = `
"--spacing-size-1: 0.25rem;
--spacing-size-2: 0.5rem;
--spacing-size-3: 0.75rem;
--spacing-size-s: 1rem;"
`;

snapshot[`processSpacing - generates correct spacing scale 2`] = `
[
  [
    "spacing.custom.size.1",
    {
      key: "--spacing-size-1",
      value: "0.25rem",
      variable: "--spacing-size-1: 0.25rem;",
    },
  ],
  [
    "spacing.custom.size.2",
    {
      key: "--spacing-size-2",
      value: "0.5rem",
      variable: "--spacing-size-2: 0.5rem;",
    },
  ],
  [
    "spacing.custom.size.3",
    {
      key: "--spacing-size-3",
      value: "0.75rem",
      variable: "--spacing-size-3: 0.75rem;",
    },
  ],
  [
    "spacing.custom.size.s",
    {
      key: "--spacing-size-s",
      value: "1rem",
      variable: "--spacing-size-s: 1rem;",
    },
  ],
]
`;

snapshot[`processSpacing - handles settings 1`] = `
"--spacing-size-1: 1rem;
--spacing-size-2: 0.5rem;
--spacing-scale-md: 8px;
--spacing-scale-lg: 0.75rem;"
`;

snapshot[`processSpacing - handles settings 2`] = `
[
  [
    "spacing.custom.size.1",
    {
      key: "--spacing-size-1",
      value: "1rem",
      variable: "--spacing-size-1: 1rem;",
    },
  ],
  [
    "spacing.custom.size.2",
    {
      key: "--spacing-size-2",
      value: "0.5rem",
      variable: "--spacing-size-2: 0.5rem;",
    },
  ],
  [
    "spacing.custom.scale.md",
    {
      key: "--spacing-scale-md",
      value: "8px",
      variable: "--spacing-scale-md: 8px;",
    },
  ],
  [
    "spacing.custom.scale.lg",
    {
      key: "--spacing-scale-lg",
      value: "0.75rem",
      variable: "--spacing-scale-lg: 0.75rem;",
    },
  ],
]
`;

snapshot[`processSpacing - generates fluid spacing (prefix) 1`] = `
"--spacing_fluid-base-foo-xs: clamp(0rem, 0rem + 0vw, 0rem);
--spacing_fluid-base-foo-s: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);
--spacing_fluid-base-foo-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);
--spacing_fluid-base-foo-l: clamp(0.5rem, -0.3333rem + 4.1667vw, 3rem);
--spacing_fluid-base-foo-xs-l: clamp(0rem, -1rem + 5vw, 3rem);
--spacing_fluid-base-foo-xs-s: clamp(0rem, -0.5rem + 2.5vw, 1.5rem);
--spacing_fluid-base-foo-s-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);
--spacing_fluid-base-foo-m-l: clamp(0.25rem, -0.6667rem + 4.5833vw, 3rem);"
`;

snapshot[`processSpacing - generates fluid spacing (prefix) 2`] = `
[
  [
    "spacing_fluid.base@xs",
    {
      key: "--spacing_fluid-base-foo-xs",
      value: "clamp(0rem, 0rem + 0vw, 0rem)",
      variable: "--spacing_fluid-base-foo-xs: clamp(0rem, 0rem + 0vw, 0rem);",
    },
  ],
  [
    "spacing_fluid.base@s",
    {
      key: "--spacing_fluid-base-foo-s",
      value: "clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem)",
      variable: "--spacing_fluid-base-foo-s: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@m",
    {
      key: "--spacing_fluid-base-foo-m",
      value: "clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem)",
      variable: "--spacing_fluid-base-foo-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@l",
    {
      key: "--spacing_fluid-base-foo-l",
      value: "clamp(0.5rem, -0.3333rem + 4.1667vw, 3rem)",
      variable: "--spacing_fluid-base-foo-l: clamp(0.5rem, -0.3333rem + 4.1667vw, 3rem);",
    },
  ],
  [
    "spacing_fluid.base@xs-l",
    {
      key: "--spacing_fluid-base-foo-xs-l",
      value: "clamp(0rem, -1rem + 5vw, 3rem)",
      variable: "--spacing_fluid-base-foo-xs-l: clamp(0rem, -1rem + 5vw, 3rem);",
    },
  ],
  [
    "spacing_fluid.base@xs-s",
    {
      key: "--spacing_fluid-base-foo-xs-s",
      value: "clamp(0rem, -0.5rem + 2.5vw, 1.5rem)",
      variable: "--spacing_fluid-base-foo-xs-s: clamp(0rem, -0.5rem + 2.5vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@s-m",
    {
      key: "--spacing_fluid-base-foo-s-m",
      value: "clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem)",
      variable: "--spacing_fluid-base-foo-s-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@m-l",
    {
      key: "--spacing_fluid-base-foo-m-l",
      value: "clamp(0.25rem, -0.6667rem + 4.5833vw, 3rem)",
      variable: "--spacing_fluid-base-foo-m-l: clamp(0.25rem, -0.6667rem + 4.5833vw, 3rem);",
    },
  ],
]
`;

snapshot[`processSpacing - fluid without prefix falls back to scale name 1`] = `
"--spacing_fluid-rhythm-xs: clamp(0rem, 0rem + 0vw, 0rem);
--spacing_fluid-rhythm-s: clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem);
--spacing_fluid-rhythm-m: clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem);
--spacing_fluid-rhythm-xs-s: clamp(0rem, -0.4167rem + 2.0833vw, 1.25rem);
--spacing_fluid-rhythm-s-m: clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem);"
`;

snapshot[`processSpacing - fluid without prefix falls back to scale name 2`] = `
[
  [
    "spacing_fluid.rhythm@xs",
    {
      key: "--spacing_fluid-rhythm-xs",
      value: "clamp(0rem, 0rem + 0vw, 0rem)",
      variable: "--spacing_fluid-rhythm-xs: clamp(0rem, 0rem + 0vw, 0rem);",
    },
  ],
  [
    "spacing_fluid.rhythm@s",
    {
      key: "--spacing_fluid-rhythm-s",
      value: "clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem)",
      variable: "--spacing_fluid-rhythm-s: clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem);",
    },
  ],
  [
    "spacing_fluid.rhythm@m",
    {
      key: "--spacing_fluid-rhythm-m",
      value: "clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem)",
      variable: "--spacing_fluid-rhythm-m: clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem);",
    },
  ],
  [
    "spacing_fluid.rhythm@xs-s",
    {
      key: "--spacing_fluid-rhythm-xs-s",
      value: "clamp(0rem, -0.4167rem + 2.0833vw, 1.25rem)",
      variable: "--spacing_fluid-rhythm-xs-s: clamp(0rem, -0.4167rem + 2.0833vw, 1.25rem);",
    },
  ],
  [
    "spacing_fluid.rhythm@s-m",
    {
      key: "--spacing_fluid-rhythm-s-m",
      value: "clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem)",
      variable: "--spacing_fluid-rhythm-s-m: clamp(0.125rem, -0.25rem + 1.875vw, 1.25rem);",
    },
  ],
]
`;

snapshot[`processSpacing - combines fluid and custom spacing 1`] = `
"--spacing_fluid-base-flux-xs: clamp(0rem, 0rem + 0vw, 0rem);
--spacing_fluid-base-flux-s: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);
--spacing_fluid-base-flux-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);
--spacing_fluid-base-flux-xs-s: clamp(0rem, -0.5rem + 2.5vw, 1.5rem);
--spacing_fluid-base-flux-s-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);
--spacing-gap-1: 4px;
--spacing-gap-2: 8px;"
`;

snapshot[`processSpacing - combines fluid and custom spacing 2`] = `
[
  [
    "spacing_fluid.base@xs",
    {
      key: "--spacing_fluid-base-flux-xs",
      value: "clamp(0rem, 0rem + 0vw, 0rem)",
      variable: "--spacing_fluid-base-flux-xs: clamp(0rem, 0rem + 0vw, 0rem);",
    },
  ],
  [
    "spacing_fluid.base@s",
    {
      key: "--spacing_fluid-base-flux-s",
      value: "clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem)",
      variable: "--spacing_fluid-base-flux-s: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@m",
    {
      key: "--spacing_fluid-base-flux-m",
      value: "clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem)",
      variable: "--spacing_fluid-base-flux-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@xs-s",
    {
      key: "--spacing_fluid-base-flux-xs-s",
      value: "clamp(0rem, -0.5rem + 2.5vw, 1.5rem)",
      variable: "--spacing_fluid-base-flux-xs-s: clamp(0rem, -0.5rem + 2.5vw, 1.5rem);",
    },
  ],
  [
    "spacing_fluid.base@s-m",
    {
      key: "--spacing_fluid-base-flux-s-m",
      value: "clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem)",
      variable: "--spacing_fluid-base-flux-s-m: clamp(0.25rem, -0.1667rem + 2.0833vw, 1.5rem);",
    },
  ],
  [
    "spacing.custom.gap.1",
    {
      key: "--spacing-gap-1",
      value: "4px",
      variable: "--spacing-gap-1: 4px;",
    },
  ],
  [
    "spacing.custom.gap.2",
    {
      key: "--spacing-gap-2",
      value: "8px",
      variable: "--spacing-gap-2: 8px;",
    },
  ],
]
`;
